--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: python
-python: 3.7
+python: 3.6
 dist: xenial # https://github.com/travis-ci/travis-ci/issues/9815#issuecomment-401756442
 sudo: true
+env:
+  - DATABASE_URL=''
 install:
   - pip install pipenv
   - pipenv install --dev
