--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ flask-migrate = "*"
 flask-script = "*"
 flask-marshmallow = "*"
 marshmallow-sqlalchemy = "*"
+python-dotenv = "*"
 
 [dev-packages]
 flask-testing = "*"
